# Loz_enhanced

./: .gitignore  CMakeLists.txt
Configs/: allegro5.cfg
Game/Loz/: CollisionType.h  Common.h  Debug.cpp  Debug.h  EliminateMenu.cpp  Geom.h  Global.h  Graphics.cpp  Helpers.cpp  Helpers.h  ItemObj.cpp  Loz.cpp  Monsters.cpp  Object.cpp  Object.h  Player.cpp  SaveFolder.cpp  Sound.cpp  Util.cpp  Util.h  World.cpp  World.h
Shaders/: tileShaderPixel.glsl
